--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
      Scan QR Dana
     </h2>
     <div class="flex justify-center mb-4">
-     <img alt="QR code for Dana payment, black and white square pattern on white background" class="w-56 h-56 object-contain rounded-md shadow-md" height="250" loading="lazy" src="https://files.catbox.moe/qjdas7.png" width="250"/>
+     <img alt="QR code for Dana payment, black and white square pattern on white background" class="w-56 h-56 object-contain rounded-md shadow-md" height="250" loading="lazy" src="https://files.catbox.moe/qr8c5c.png" width="250"/>
     </div>
     <p class="text-center text-gray-600">
      Scan QR code di atas menggunakan aplikasi Dana untuk melakukan pembayaran.
